# LPRS2_2026

./: LICENSE  README.md
Common/FW/: avr_io_bitfields.h
Common/HW/: bom_csv_grouped_by_value_with_fp_OC_Distrib.py
Common/HW/For_Rasterboard.pretty/: R_Axial_DIN0411_L9.9mm_D3.6mm_P1SideInAir_Vertical.kicad_mod  R_Axial_DIN0411_L9.9mm_D3.6mm_P2.54mm_Vertical.kicad_mod  R_Axial_DIN0516_L15.5mm_D5.0mm_P20.32mm_Q2.54mm_Horizontal.kicad_mod  R_Axial_Power_L25.0mm_W9.0mm_P1SideInAir_Vertical.kicad_mod  R_Axial_Power_L25.0mm_W9.0mm_P27.94mm_Q2.54mm.kicad_mod  R_Axial_Power_L25.0mm_W9.0mm_P2SidesInAir_Vertical.kicad_mod  R_Axial_Power_L48.0mm_W9.0mm_P1SideInAir_Vertical.kicad_mod  R_Axial_Power_L48.0mm_W9.0mm_P55.88mm_Q2.54mm.kicad_mod  R_Axial_Power_L60.0mm_W14.0mm_P1SideInAir_Vertical.kicad_mod  R_Axial_Power_L60.0mm_W14.0mm_P66.04mm_Q2.54mm.kicad_mod
Common/SW/: Combinatorics_Helpers.jl  Compare.jl  Electronics_Helpers.jl  Noise.jl  Spectrum.jl  Units.jl  Utils.jl  r_comb.jl
Common/SW/common/: utils.py
Common/Scripts/avrwaf/: arduino.py
Conveyer_Sorter/ROS2/: install_ros2_minimal.sh
Conveyer_Sorter/ROS2/pc_sensors_ws/: flow.sh
Conveyer_Sorter/ROS2/rpi_actuators_ws/src/wiper/: CMakeLists.txt  package.xml
Conveyer_Sorter/ROS2/rpi_actuators_ws/src/wiper/src/: wiper_node.cpp
Conveyer_Sorter/SW/YOLO/: install_YOLOv8.sh
DAQ_Zynq_GUI/: work.txt
LLVM_sv_cpu/FW/: asm.sh  delays.tsv
LLVM_sv_cpu/FW/test/: 012__mov_i__st.sv.asm  021__add_vec.sv.asm  030__s_f64_add.sv.asm  052__v_pred.sv.asm  053__v_ld.sv.asm  054__v_i64_cmp.sv.asm  057__vdata_test.sv.asm
(+22 files in other folders)
